<resources>
    <string name="app_name" translatable="false">My_Calculator_lesson_second</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>


    <string name="clear" translatable="false">C</string>
    <string name="exponent" translatable="false">^</string>
    <string name="parentheses" translatable="false">(  )</string>
    <string name="divide" translatable="false">/</string>
    <string name="multiply" translatable="false">*</string>
    <string name="subtract" translatable="false">-</string>
    <string name="add" translatable="false">+</string>
    <string name="PlusMinus" translatable="false">+/-</string>
    <string name="equals" translatable="false">=</string>
    <string name="point" translatable="false">.</string>
    <string name="TextView" translatable="false"> </string>


    <string name="delete" translatable="false"> X </string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="standard">standard</string>
    <string name="go_calculator">Go_Calculator</string>
    <string name="go_theme">Go_Theme</string>



</resources>